<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/black"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/time_passed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/default_time"
        android:textColor="@color/white"
        android:textSize="195sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="10dp" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dark_green"
            android:onClick="startCountingAction"
            android:text="@string/button_start"
            android:textSize="50sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_red"
            android:onClick="stopCountingAction"
            android:text="@string/button_stop"
            android:textSize="50sp" />
    </FrameLayout>

</LinearLayout>